# platform_bionic

./: .clang-format  .gitignore  ABI-bugs.txt  Android.bp  Android.mk  CPPLINT.cfg  CleanSpec.mk  HACKING.txt  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  ThirdPartyProject.prop  android-changes-for-ndk-developers.md  dummy_mountpoint
docs/: c23.md  (+12 more)
libc/: Android.bp  Android.mk  BUILD  BUILD.bazel  Blueprints  Jamfile  NOTICE  README  SECCOMP_ALLOWLIST_APP.TXT  SECCOMP_ALLOWLIST_COMMON.TXT  SECCOMP_ALLOWLIST_SYSTEM.TXT  SECCOMP_BLACKLIST.TXT  SECCOMP_BLACKLIST_APP.TXT  SECCOMP_BLACKLIST_COMMON.TXT  SECCOMP_BLOCKLIST_APP.TXT  SECCOMP_BLOCKLIST_COMMON.TXT  SECCOMP_PRIORITY.TXT  SECCOMP_WHITELIST.TXT  SECCOMP_WHITELIST_APP.TXT  SECCOMP_WHITELIST_COMMON.TXT  SECCOMP_WHITELIST_GLOBAL.TXT  SECCOMP_WHITELIST_SYSTEM.TXT  SYSCALLS.TXT  arpa_nameser.h  crt.mk  fs_config_generator.py  libc.arm.brillo.map  libc.arm.map  libc.arm64.map  libc.map  libc.map.txt  libc.mips.brillo.map  libc.mips.map  libc.mips64.brillo.map  libc.mips64.map  libc.x86.brillo.map  libc.x86.map  libc.x86_64.map  libstdc++.map.txt  libstdc++.mips.map  (+5 more)
libc/arch-aarch64/: aarch64.mk  syscalls.mk
libc/arch-arm/: arm.mk  dynamic_function_dispatch.cpp  dynamic_function_wrapper.S  static_function_dispatch.S  syscalls.S  syscalls.mk
libc/arch-arm64/: arm64.mk  dynamic_function_dispatch.cpp  static_function_dispatch.S  syscalls.S  syscalls.mk
libc/arch-mips/: mips.mk  syscalls.S  syscalls.mk
libc/arch-mips64/: include  mips64.mk  syscalls.S  syscalls.mk
libc/arch-riscv64/: dynamic_function_dispatch.cpp  (+1 more)
(+6877 files in other folders)
