# This file added for experimental interoperability with Bazel.
package(
    default_visibility = ["@//:__pkg__"],
)

genrule(
    name = "syscalls-arm",
    outs = ["syscalls-arm.S"],
    srcs = ["SYSCALLS.TXT"],
    tools = ["//bionic/libc/tools:bionic-gensyscalls"],
    cmd = "$(location //bionic/libc/tools:bionic-gensyscalls) arm $< > $@",
)

genrule(
    name = "syscalls-arm64",
    outs = ["syscalls-arm64.S"],
    srcs = ["SYSCALLS.TXT"],
    tools = ["//bionic/libc/tools:bionic-gensyscalls"],
    cmd = "$(location //bionic/libc/tools:bionic-gensyscalls) arm64 $< > $@",
)

genrule(
    name = "syscalls-x86",
    outs = ["syscalls-x86.S"],
    srcs = ["SYSCALLS.TXT"],
    tools = ["//bionic/libc/tools:bionic-gensyscalls"],
    cmd = "$(location //bionic/libc/tools:bionic-gensyscalls) x86 $< > $@",
)

genrule(
    name = "syscalls-x86_64",
    outs = ["syscalls-x86_64.S"],
    srcs = ["SYSCALLS.TXT"],
    tools = ["//bionic/libc/tools:bionic-gensyscalls"],
    cmd = "$(location //bionic/libc/tools:bionic-gensyscalls) x86_64 $< > $@",
)
